--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BoDi" version="1.4.1" targetFramework="net472" />
   <package id="Cucumber.Messages" version="13.1.0" targetFramework="net472" />
@@ -11,8 +11,8 @@
   <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net472" />
   <package id="SpecFlow" version="3.0.225" targetFramework="net472" />
   <package id="SpecFlow.Tools.MsBuild.Generation" version="3.0.225" targetFramework="net472" />
-  <package id="SpecRun.Runner" version="3.1.48" targetFramework="net472" />
-  <package id="SpecRun.SpecFlow.3-0-0" version="3.1.48" targetFramework="net472" />
+  <package id="SpecRun.Runner" version="3.1.44" targetFramework="net472" />
+  <package id="SpecRun.SpecFlow.3-0-0" version="3.1.44" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.Collections.Specialized" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.2" targetFramework="net472" />
