--- a/packages.config
+++ b/packages.config
@@ -1,26 +1,45 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BoDi" version="1.4.1" targetFramework="net472" />
   <package id="Cucumber.Messages" version="13.1.0" targetFramework="net472" />
   <package id="Gherkin" version="6.0.0" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.13.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="2.0.2" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.CodeCoverage" version="16.7.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="2.0.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.0.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Net.Http.Headers" version="2.0.2" targetFramework="net472" />
   <package id="Microsoft.NET.Test.Sdk" version="16.7.1" targetFramework="net472" />
   <package id="Microsoft.TestPlatform.TestHost" version="16.7.1" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net472" />
+  <package id="PuppeteerSharp" version="5.0.0" targetFramework="net472" />
+  <package id="SharpZipLib" version="1.3.1" targetFramework="net472" />
   <package id="SpecFlow" version="3.0.225" targetFramework="net472" />
   <package id="SpecFlow.Tools.MsBuild.Generation" version="3.0.225" targetFramework="net472" />
   <package id="SpecRun.Runner" version="3.1.44" targetFramework="net472" />
   <package id="SpecRun.SpecFlow.3-0-0" version="3.1.44" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.Collections.Specialized" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.2" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="4.4.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net472" />
   <package id="Utf8Json" version="1.3.7" targetFramework="net472" />
 </packages>
