--- a/specf1.csproj
+++ b/specf1.csproj
@@ -183,14 +183,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="pages\WebPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpecFlow\TestRun.cs" />
     <Compile Include="steps\GoogleWebToolKit.cs" />
     <Compile Include="steps\TaschenRechnerSteps.cs" />
-    <Compile Include="TaschenRechner\Rechner.cs" />
+    <Compile Include="pages\Rechner.cs" />
+    <Compile Include="utils\TimingHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="features\GoogleWebToolPage.feature" />
     <None Include="features\taschenRechner.feature" />
     <None Include="packages.config" />
     <None Include="runtests.cmd" />
