--- a/packages.config
+++ b/packages.config
@@ -18,6 +18,7 @@
   <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net472" />
+  <package id="NLog" version="4.7.11" targetFramework="net472" />
   <package id="PuppeteerSharp" version="5.0.0" targetFramework="net472" />
   <package id="SharpZipLib" version="1.3.1" targetFramework="net472" />
   <package id="SpecFlow" version="3.0.225" targetFramework="net472" />
